--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
 
 
 
-
+1. Переделать методы на hql
+2. Добавить метод на criteria
+3. getByLogin -> getByPassword
 4*. Навести порядок в пом
 
 *to one = eager
 *to many = lazy
+
+mapped by главный
