--- a/web/src/main/resources/i18n/messages.properties
+++ b/web/src/main/resources/i18n/messages.properties
@@ -3,5 +3,112 @@ page.entry=Enter
 page.student=Registration as student
 page.teacher=Registration as teacher
 page.lesson=View lesson plan
-page.name=First name
 
+header=You are on the site of the best educational center
+
+footer=All rights reserved
+
+AuthUserFalseRegistration.alreadyRegistration=You have already been registered
+AuthUserFalseRegistration.enter=Your login details
+AuthUserFalseRegistration.login=Your login
+AuthUserFalseRegistration.password=Your password
+AuthUserFalseRegistration.account=Log in to your account
+
+CTestPage.answer=You need to answer all questions
+
+InvalidData.invalid=Failed to log in
+InvalidData.incorrect=Login or password is incorrect
+InvalidData.enter=Log in to your account
+InvalidData.manePage=Return to main page
+
+JavaTestPage.answer=You need to answer all questions
+
+LoginAfterRegistration.enter=Log in to your account
+LoginAfterRegistration.logIn=Enter your username and password
+LoginAfterRegistration.login=Your login
+LoginAfterRegistration.password=Your password
+
+LoginFromStartPage.enter=Log in to your account
+LoginFromStartPage.logIn=Enter your username and password
+LoginFromStartPage.login=Your login
+LoginFromStartPage.password=Your password
+
+PHPTestPage.answer=You need to answer all questions
+
+ResultOfTest.certificate=Congratulations, you get a certificate
+ResultOfTest.result=Your result
+ResultOfTest.stateCertificate=You get a state certificate
+ResultOfTest.manePage=Return to main page
+
+StudentPersonalArea.avJava=Available Java Courses
+StudentPersonalArea.avPHP=Available PHP Courses
+StudentPersonalArea.avC=Available C++ Courses
+StudentPersonalArea.courseName=Course name
+StudentPersonalArea.startDate=Course Start Date
+StudentPersonalArea.endDate=Course End Date
+StudentPersonalArea.choise=Choose the courses you will attend
+StudentPersonalArea.javaStudents=List of Java students
+StudentPersonalArea.phpStudents=List of PHP students
+StudentPersonalArea.cStudents=List of C++ students
+StudentPersonalArea.name=Name
+StudentPersonalArea.secondName=Second name
+StudentPersonalArea.email=Email adress
+StudentPersonalArea.changePassword=Change Password
+StudentPersonalArea.lessonPlan=View lesson plan
+StudentPersonalArea.logout=Logout
+StudentPersonalArea.finish=Finish study
+StudentPersonalArea.manePage=Return to main page
+
+StudentRegistration.reg=Student registration
+StudentRegistration.data=Registration data
+StudentRegistration.name=Name
+StudentRegistration.secondName=Second name
+StudentRegistration.email=Email adress
+StudentRegistration.age=Age
+StudentRegistration.lang=Choose a programming language to learn
+
+StudyPage.javaPlan=Java lesson plan
+StudyPage.phpPlan=PHP lesson plan
+StudyPage.cPlan=C++ lesson plan
+StudyPage.read=1. Read something
+StudyPage.view=2. View something
+StudyPage.code=3. Write code
+StudyPage.javaTest=Take Java test
+StudyPage.phpTest=Take PHP test
+StudyPage.cTest=Take C++ test
+StudyPage.return=Return to your account
+
+SuccessRegistrationNewUser.seccess=Registration completed successfully
+SuccessRegistrationNewUser.details=Your login details
+SuccessRegistrationNewUser.login=Your login
+SuccessRegistrationNewUser.password=Your password
+SuccessRegistrationNewUser.enter=Log in to your account
+
+TeacherPersonalArea.logged=You are logged in to your account
+TeacherPersonalArea.announce=Announce Course Admission
+TeacherPersonalArea.regData=Registration data
+TeacherPersonalArea.courseName=Course name
+TeacherPersonalArea.start=Course start date
+TeacherPersonalArea.end=Course end date
+TeacherPersonalArea.myCourse=My course
+TeacherPersonalArea.teachersList=List of teachers for this course
+TeacherPersonalArea.name=Name
+TeacherPersonalArea.secondName=Second name
+TeacherPersonalArea.email=Email adress
+TeacherPersonalArea.studentsList=List of my students
+TeacherPersonalArea.score=Final score
+TeacherPersonalArea.changePassword=Change Password
+TeacherPersonalArea.logout=Logout
+TeacherPersonalArea.finish=Finish teaching
+TeacherPersonalArea.manePage=Return to main page
+
+TeacherRegistration.reg=Teacher registration
+TeacherRegistration.data=Registration data
+TeacherRegistration.name=Name
+TeacherRegistration.secondName=Second name
+TeacherRegistration.email=Email adress
+TeacherRegistration.lang=Choose a programming language to teach
+
+ValidationStudyPage.access=To access this resource you need to log in with your account
+ValidationStudyPage.login=Log in to your account
+ValidationStudyPage.return=Return to the main page
