--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -6,6 +6,9 @@ page.lesson=View lesson plan
 
 header=You are on the site of the best educational center
 
+avatar.upload=Upload
+avatar.info=Upload your avatar
+
 footer=All rights reserved
 
 AuthUserFalseRegistration.alreadyRegistration=You have already been registered
