--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -6,6 +6,9 @@ page.lesson=Посмотреть план занятий
 
 header=Вы находитесь на сайте лучшего образовательного центра
 
+avatar.upload=Загрузить
+avatar.info=Загручить ваш аватар
+
 footer=Все права защищены
 
 AuthUserFalseRegistration.alreadyRegistration=Вы уже были зарегистрированы
