--- a/TODO
+++ b/TODO
@@ -6,8 +6,10 @@ LoginAFromStartPage -->> /personalStart -->> Student/TeacherPErsonaArea
 
 DONE 1. Delete authUser from session (AuthUser authUser = (AuthUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal();)
 DONE 2. Delete session.invalidation();
-3. Change student and teacher on AuthUserEntiry.getStudent();
 DONE 4. i18n
 DONE 5. TeacherPersonalArea jspx
+6. Download certificate
+7. Clear servlets
+3. Change student and teacher on AuthUserEntiry.getStudent();
 
 
