--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -9,6 +9,11 @@ header=You are on the site of the best educational center
 avatar.upload=Upload
 avatar.info=Upload your avatar
 
+exception.wrong=Something went wrong
+
+download.certificate=Download certificate
+download.reference=Download reference
+
 footer=All rights reserved
 
 AuthUserFalseRegistration.alreadyRegistration=You have already been registered
