--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -9,6 +9,11 @@ header=Вы находитесь на сайте лучшего образова
 avatar.upload=Загрузить
 avatar.info=Загручить ваш аватар
 
+exception.wrong=Что-то пошло не так
+
+download.certificate=Скачать справку
+download.reference=Скачать сертификат
+
 footer=Все права защищены
 
 AuthUserFalseRegistration.alreadyRegistration=Вы уже были зарегистрированы
