student personal area fixes

--- a/web/src/main/resources/i18n/messages_ru.properties
+++ b/web/src/main/resources/i18n/messages_ru.properties
@@ -11,8 +11,8 @@ avatar.info=Загручить ваш аватар
 
 exception.wrong=Что-то пошло не так
 
-download.certificate=Скачать справку
-download.reference=Скачать сертификат
+download.certificate=Скачать сертификат
+download.reference=Скачать справку
 
 footer=Все права защищены
 
